symbol-db: don't allow or set null scope_definition_id and scope_id.

Add not null constraints to the two fields and fixup PREP_QUERY_SYMBOL_NEW and
PREP_QUERY_UPDATE_SYMBOL_SCOPE_ID so that they don't set the fields to null.

The scope_id lookup in PREP_QUERY_SYMBOL_NEW can be removed since
the call to sdb_engine_add_new_scope_definition() at symbol-db-engine-core.c:4830 already
does  the lookup.

https://bugzilla.gnome.org/show_bug.cgi?id=688533